@startuml

title __CECS277PROJ2's Class Diagram__\n

  namespace  {
    namespace ecs277 {
      namespace roj2 {
        class cecs277proj2.Candy {
            - pricepp : double
            - type : String
            - weight : double
            + Candy()
            + Candy()
            + getCost()
            + getPricepp()
            + getType()
            + getWeight()
            + setPricepp()
            + setWeight()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace ecs277 {
      namespace roj2 {
        class cecs277proj2.Checkout {
            ~ di : ArrayList<DessertItem>
            - taxRate : double
            + Checkout()
            + clear()
            + enterItem()
            + getArray()
            + getNumberOfItems()
            + getTaxRate()
            + getTotalCost()
            + getTotalTax()
            + setTaxRate()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace ecs277 {
      namespace roj2 {
        class cecs277proj2.Cookie {
            - number : double
            - ppd : double
            - type : String
            + Cookie()
            + Cookie()
            + getCost()
            + getNumber()
            + getPpd()
            + getType()
            + setNumber()
            + setPpd()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace ecs277 {
      namespace roj2 {
        abstract class cecs277proj2.DessertItem {
            # calories : double
            # name : String
            + DessertItem()
            + DessertItem()
            + compareTo()
            + getCalories()
            {abstract} + getCost()
            + getName()
            {abstract} + getType()
            {static} + max()
            + setCalories()
            + setName()
        }
      }
    }
  }
  

  namespace  {
    namespace ecs277 {
      namespace roj2 {
        class cecs277proj2.IceCream {
            - cost : double
            - type : String
            + IceCream()
            + IceCream()
            + getCost()
            + getType()
            + setCost()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace ecs277 {
      namespace roj2 {
        class cecs277proj2.MainTest {
            {static} + main()
            {static} + maxString()
        }
      }
    }
  }
  

  namespace  {
    namespace ecs277 {
      namespace roj2 {
        class cecs277proj2.Sundae {
            - tcost : double
            - topping : String
            - type : String
            + Sundae()
            + Sundae()
            + getCost()
            + getTopping()
            + getType()
            + setTopping()
            + setToppingCost()
            + toString()
        }
      }
    }
  }
  

  cecs277proj2.Candy -up-|> cecs277proj2.DessertItem
  cecs277proj2.Cookie -up-|> cecs277proj2.DessertItem
  cecs277proj2.DessertItem .up.|> java.lang.Comparable
  cecs277proj2.IceCream -up-|> cecs277proj2.DessertItem
  cecs277proj2.Sundae -up-|> cecs277proj2.IceCream


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
